--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  background-size: cover;
+  opacity: 0.8;
+}
